Changes since last push:
- Removed boulders being able to move together. It's too complicated to be
worth having.

Known "features":
- The 'water' added in map generation means blocks can't be placed in seemingly
empty map tiles. Should be fixed when worldgeneration is fixed to not leave
so much water around, and when water is actually visible
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.
 - You can place dirt on top of creatures, including yourself
 - Tiles have an opacity between 0 and 64, but right now it only matters whether it's zero or not.
 - If carried by a boulder with another boulder right behind you, the top
boulder updates first and traps you.
 - Dirt and mud look very similar, and mud looks identical to humus

Known bugs:
 - Collision detection misses one when falling into a two-wide gap at just the
right angle
 - Riding on clouds sometimes has the cloud go forwards one update before
the player
 - When the window is bigger than the map, crossing x = 0 causes an assertion
error.
 - The player can't jump when colliding with a wall.
 - All map rendering vanishes when the player goes too high
 - When colliding with the bottom of the map, position is set but velocity isn't


To do:
 - load and unload textures
 - stacking items, throwing / picking up items
 - Trees!
 - Store data for UI and sprites in a file instead of the source code
 - save and load the player
 - Make all public Map functions accept any x value
 - Use exception handling with all file io
 - remove Map.getForeground() and Map.getBackground()
 - write Map::Map()
Still need to do: