@@ -8,6 +8,7 @@
 #include "Map.hh"
 #include "Movable.hh"
 #include "Rect.hh"
+#include "DroppedItem.hh"
 
 /* To be able to describe collisions better. */
 enum class CollisionType {
@@ -130,7 +131,8 @@ public:
 
     // A function that takes a map and a list of things and moves them, 
     // colliding when necessary
-    void update(Map &map, std::vector<movable::Movable *> &movables);
+    void update(Map &map, std::vector<movable::Movable *> &movables, 
+        std::vector<DroppedItem *> droppedItems);
 };
 
 #endif
