@@ -1,0 +1,9 @@
+#include "DroppedItem.hh"
+
+DroppedItem::DroppedItem(Item *i, int x, int y) {
+    item = i;
+    setX(x);
+    setY(y);
+}
+
+
