@@ -6,7 +6,7 @@
             "w": 16,
             "h": 16
         },
-        "name": ""
+        "name": "water.png"
     },
     "color": {
         "r": 0,
